--- a/IssueManager.WebAPI/appsettings.json
+++ b/IssueManager.WebAPI/appsettings.json
@@ -2,11 +2,11 @@
   "PlatformSettings": {
     "GitHub": {
       "BaseUrl": "https://api.github.com",
-      "Token": "your_github_token"
+      "Token": "your_token"
     },
     "GitLab": {
       "BaseUrl": "https://gitlab.com/api/v4",
-      "Token": "your_gitlab_token"
+      "Token": "your_token"
     }
   },
   "Logging": {
